--- a/login.css
+++ b/login.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     height: 500px;
     /* Set your desired height */
-    overflow: hidden;
+
 }
 
 .main::before {
@@ -167,14 +167,49 @@ color: black;
     margin-left: 10px;
     font-size: 15px;
 }
-@media only screen and (max-width:768px){
+@media only screen and (max-width:767px){
     .login-container{
         width: 500px;
     }
     #user-input{
-        margin-left: -40px;
+        margin-left: -50px;
     }
     .right-box{
         margin-right: 160px;
     }
+    .button2{
+        width: 800px ;
+    }
+  
+}
+@media only screen and (max-width:808px){
+    .captchabox{
+        margin-left: 10px;
+    }
+    .button2{
+        width: 350px;
+        margin-left: -5px;
+    }
+}
+@media only screen and (max-width:500px) {
+    .login-container{
+        width: 350px;
+       margin: 0 auto;
+       margin-top: 210px;
+    }
+    .leftbox{
+        margin-left: -50px;
+    }
+    .button2{
+        width: 200px;
+margin-left: 2px;
+    }
+    .captchabox{
+        margin-left: 34px;
+    }
+    #user-input{
+        width:170px;
+        margin-left: -60px;
+    }
+    
 }
